tests/semantic_analysis/error/add_assign.c
add_assign\.c:5:11: error:.*